# snack_tracker_project

./: .gitignore  README.md  pyproject.toml
snack_tracker_project/: settings.py  urls.py
snacks/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
templets/: base.html  snacks_details.html  snacks_list.html
